--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -28,6 +28,7 @@ data:
   preference: "SPIGOT"
 actions:
   unsafe_mode: false
+  enableOperatorActions: false
   player_command:
     #Should use playercommandpreprocessevent ?
     #true - if you need other plugins to listen to cancel or handle commands fired by items, like CombatLog MyCommands etc...
